--- a/container/src/App.css
+++ b/container/src/App.css
@@ -33,7 +33,7 @@
 
 .btndad {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .boginosgohinput {
@@ -171,5 +171,4 @@ input::placeholder {
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
